apps/meeting-tools/dev/volumes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  template:
    spec:
      volumes:
        - name: data-volume
          nfs:
            path: /main/plex/meeting-tools/dev/data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: directory-watcher-deployment
  namespace: default
spec:
  template:
    spec:
      volumes:
        - name: data-volume
          nfs:
            path: /main/plex/meeting-tools/dev/data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diarization-worker-deployment
spec:
  template:
    spec:
      volumes:
        - name: data-volume
          nfs:
            path: /main/plex/meeting-tools/dev/data
        - name: model-volume
          nfs:
            path: /main/plex/meeting-tools/dev/whisper-models
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  template:
    spec:
      volumes:
        - name: mongodb-storage
          nfs:
            path: /main/plex/meeting-tools/dev/db
