apps/meeting-tools/dev/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: meeting-tools
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`dev.MEETING_TOOLS_URL.com`) # TODO: find associated host domain for frontend
      priority: 10
      services:
        - name: frontend-service
          port: 3000
    - kind: Rule
      match: Host(`dev.MEETING_TOOLS_URL.com/api`) # TODO: find associated host domain for backend
      priority: 10
      services:
        - name: backend-service
          port: 8000
